--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <head>
-
+    <link type="style/css" ref="style/main.css" />
   </head>
   <body>
     <h1>Free websites ftw!</h1>
