Add syntax highlighting

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <head>
-    <link type="style/css" ref="style/main.css" />
+    <link rel="stylesheet" href="style/main.css" />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/mojombo/tpw/master/css/syntax.css" />
   </head>
   <body>
     <h1>Free websites ftw!</h1>
