--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <link rel="stylesheet" href="https://raw.githubusercontent.com/mojombo/tpw/master/css/syntax.css" />
   </head>
   <body>
-    <h1>Free websites ftw!</h1>
-  </body>
+   <h1>Free websites ftw!</h1>
+   <br />
+   <p class="test">
+     Test text.
+   </p>
+</body>
 </html>
