Adding structure divs

--- a/index.html
+++ b/index.html
@@ -18,25 +18,32 @@ layout: default
     {% endfor %}
   </ul>
   -->
-  <div style="margin-top: 200px; font-size:24px; text-align: center; width: 700px; margin-left: 100px;" class="matrix-font">
-    <span data-original="U" class="under-construction">U</span>
-    <span data-original="N" class="under-construction">N</span>
-    <span data-original="D" class="under-construction">D</span>
-    <span data-original="E" class="under-construction">E</span>
-    <span data-original="R" class="under-construction">R</span>
-    <span>&nbsp;</span>
-    <span data-original="C" class="under-construction">C</span>
-    <span data-original="O" class="under-construction">O</span>
-    <span data-original="N" class="under-construction">N</span>
-    <span data-original="S" class="under-construction">S</span>
-    <span data-original="T" class="under-construction">T</span>
-    <span data-original="R" class="under-construction">R</span>
-    <span data-original="U" class="under-construction">U</span>
-    <span data-original="C" class="under-construction">C</span>
-    <span data-original="T" class="under-construction">T</span>
-    <span data-original="I" class="under-construction">I</span>
-    <span data-original="O" class="under-construction">O</span>
-    <span data-original="N" class="under-construction">N</span>
+  <div class="container interior-wrapper">
+    <div id="start-menu" class="matrix-font"></div>
+    <div id="content">
+      <div id="content-body" class="content-body-class" tabindex="5000" style="height: 869px; overflow: hidden; outline: none;">
+        <div style="margin-top: 200px; font-size:24px; text-align: center; width: 700px; margin-left: 100px;" class="matrix-font">
+          <span data-original="U" class="under-construction">U</span>
+          <span data-original="N" class="under-construction">N</span>
+          <span data-original="D" class="under-construction">D</span>
+          <span data-original="E" class="under-construction">E</span>
+          <span data-original="R" class="under-construction">R</span>
+          <span>&nbsp;</span>
+          <span data-original="C" class="under-construction">C</span>
+          <span data-original="O" class="under-construction">O</span>
+          <span data-original="N" class="under-construction">N</span>
+          <span data-original="S" class="under-construction">S</span>
+          <span data-original="T" class="under-construction">T</span>
+          <span data-original="R" class="under-construction">R</span>
+          <span data-original="U" class="under-construction">U</span>
+          <span data-original="C" class="under-construction">C</span>
+          <span data-original="T" class="under-construction">T</span>
+          <span data-original="I" class="under-construction">I</span>
+          <span data-original="O" class="under-construction">O</span>
+          <span data-original="N" class="under-construction">N</span>
+        </div>
+      </div>
+    </div>
   </div>
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
